@@ -1,5 +1,8 @@
 QdbS Changelog:
 
+[ ?.?? ] - ??/??/???? (mm/dd/yyyy)
+Changed changed the syntax of some SQL queries to use LIMIT and OFFSET instead of just LIMIT
+
 [ 1.13 ] - 06/19/2020 (mm/dd/yyyy)
 Fix for incorrect error handling of mysqli_connect in install script
 Fix for issue adding intial admin during install
